--- a/with-arguments/master/.env.example
+++ b/with-arguments/master/.env.example
@@ -1,7 +1,7 @@
 # Redis Master
-COMPOSE_PROJECT_NAME="redis"
+COMPOSE_PROJECT_NAME="redis-master"
 UID=1000
 GID=1000
 REDIS_MASTER_PASS="123456789"
 REDIS_SLAVE_PASS="abcd"
-REDIS_PORT=6379
+DC_REDIS_PORT=6379
