--- a/with-arguments/master/docker-compose.yml
+++ b/with-arguments/master/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     user: "${UID:-1000}:${GID:-1000}"
     command: redis-server --requirepass ${REDIS_MASTER_PASS} --masterauth ${REDIS_MASTER_PASS}
     ports:
-      - '${REDIS_PORT:-6379}:6379'
+      - '${DC_REDIS_PORT:-6379}:6379'
     volumes:
       - ./data:/data
     environment:
