--- a/with-arguments/slave/docker-compose.yml
+++ b/with-arguments/slave/docker-compose.yml
@@ -6,12 +6,9 @@ services:
     user: "${UID:-1000}:${GID:-1000}"
     command: redis-server --requirepass ${REDIS_SLAVE_PASS} --masterauth ${REDIS_MASTER_PASS} --replicaof ${REDIS_MASTER_HOST} ${REDIS_MASTER_PORT}
     ports:
-      - '${REDIS_PORT:-6379}:6379'
+      - '${DC_REDIS_PORT:-6379}:6379'
     volumes:
       - ./data:/data
-    environment:
-      - REDIS_REPLICATION_MODE=slave
-      - REDIS_REPLICATION_PASS=${REDIS_MASTER_PASS}
     healthcheck:
       test: [ "CMD", "redis-cli", "ping" ]
       interval: 30s
